--- a/BloodReg/Views/Pages/Student.xaml
+++ b/BloodReg/Views/Pages/Student.xaml
@@ -8,6 +8,7 @@
     xmlns:local="clr-namespace:BloodReg.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:ws="https://schemas.elecho.dev/wpfsuite"
     Title="Student"
     d:DataContext="{d:DesignInstance Type=local:Student,
                                      IsDesignTimeCreatable=False}"
@@ -22,7 +23,6 @@
     <Page.Resources>
         <converters:BoolToAppearanceConverter x:Key="BoolToAppearanceConverter" />
         <converters:StringToDonationVolumeConverter x:Key="StringToDonationVolumeConverter" />
-        <Style BasedOn="{StaticResource MyButtonStyle}" TargetType="ui:Button" />
     </Page.Resources>
 
     <Grid Margin="16">
@@ -36,19 +36,18 @@
             Background="{DynamicResource ControlFillColorDefaultBrush}"
             CornerRadius="4">
             <DockPanel>
-                <StackPanel Margin="8,8,8,0" DockPanel.Dock="Top">
+                <ws:StackPanel
+                    Margin="8,8,8,0"
+                    DockPanel.Dock="Top"
+                    Spacing="8">
                     <ui:TextBlock FontSize="32" Text="姓名：" />
                     <ui:TextBox
                         x:Name="NameBox"
-                        Margin="0,8,0,0"
                         BorderThickness="0"
                         FontSize="24"
                         PreviewKeyDown="NameBox_PreviewKeyDown"
                         Text="{Binding ViewModel.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                    <ui:TextBlock
-                        Margin="0,8,0,0"
-                        FontSize="32"
-                        Text="献血量：" />
+                    <ui:TextBlock FontSize="32" Text="献血量：" />
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -57,7 +56,6 @@
                         <ui:TextBox
                             x:Name="DonationVolumeBox"
                             Grid.Column="0"
-                            Margin="0,8,0,0"
                             extensions:TextBoxAttachedProperties.IsOnlyNumber="True"
                             BorderThickness="0"
                             FontSize="24"
@@ -70,19 +68,15 @@
                             FontSize="32"
                             Text="ml" />
                     </Grid>
-                    <ui:TextBlock
-                        Margin="0,8,0,0"
-                        FontSize="32"
-                        Text="学号：" />
+                    <ui:TextBlock FontSize="32" Text="学号：" />
                     <ui:TextBox
                         x:Name="StudentIdBox"
-                        Margin="0,8,0,0"
                         extensions:TextBoxAttachedProperties.IsOnlyNumber="True"
                         BorderThickness="0"
                         FontSize="24"
                         PreviewKeyDown="StudentIdBox_PreviewKeyDown"
                         Text="{Binding ViewModel.StudentID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                </StackPanel>
+                </ws:StackPanel>
                 <StackPanel
                     Margin="8,0,8,0"
                     HorizontalAlignment="Stretch"
@@ -92,16 +86,16 @@
                         x:Name="ClerkBox"
                         Margin="0,8,0,0"
                         BorderThickness="0"
-                        FontSize="32"
+                        FontSize="24"
                         PreviewKeyDown="ClerkBox_PreviewKeyDown"
                         Text="{Binding ViewModel.Clerk, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <ui:Button
                         Margin="0,12,0,8"
                         HorizontalAlignment="Stretch"
                         Appearance="Primary"
-                        Click="AddButton_Click"
-                        Content="添加"
-                        FontSize="32" />
+                        Click="AddButton_Click">
+                        <ui:TextBlock FontSize="32" Text="添加" />
+                    </ui:Button>
                 </StackPanel>
             </DockPanel>
         </Border>
