--- a/BloodReg/Styles/MyScrollBar.xaml
+++ b/BloodReg/Styles/MyScrollBar.xaml
@@ -5,12 +5,6 @@
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:ws="https://schemas.elecho.dev/wpfsuite">
 
-    <Duration x:Key="ScrollAnimationDuration">0:0:0.16</Duration>
-    <Duration x:Key="ButtonHoverAnimationDuration">0:0:0.16</Duration>
-
-    <sys:Double x:Key="LineButtonHeight">12</sys:Double>
-    <sys:Double x:Key="LineButtonWidth">12</sys:Double>
-
     <Style x:Key="UiScrollBarLineButton" TargetType="{x:Type RepeatButton}">
         <Setter Property="Foreground" Value="{DynamicResource ScrollBarButtonArrowForeground}" />
         <Setter Property="Width" Value="{StaticResource LineButtonWidth}" />
@@ -37,7 +31,7 @@
                             Filled="True"
                             FontSize="{TemplateBinding FontSize}"
                             Foreground="{TemplateBinding Foreground}"
-                            Symbol="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}" />
+                            Symbol="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay, TargetNullValue={x:Static controls:SymbolRegular.Empty}}" />
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -107,7 +101,7 @@
     </Style>
 
     <ControlTemplate x:Key="UiVerticalScrollBar" TargetType="{x:Type ScrollBar}">
-        <Grid>
+        <Grid HorizontalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition MaxHeight="14" />
                 <RowDefinition Height="0.00001*" />
@@ -226,7 +220,7 @@
     </ControlTemplate>
 
     <ControlTemplate x:Key="UiHorizontalScrollBar" TargetType="{x:Type ScrollBar}">
-        <Grid>
+        <Grid VerticalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition MaxWidth="18" />
                 <ColumnDefinition Width="0.00001*" />
@@ -345,7 +339,7 @@
 
     <Style x:Key="UiScrollBar" TargetType="{x:Type ScrollBar}">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Margin" Value="-12,0,0,0" />
+        <Setter Property="Margin" Value="0" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="OverridesDefaultStyle" Value="True" />
@@ -363,6 +357,7 @@
         </Style.Triggers>
     </Style>
 
+    <Style BasedOn="{StaticResource UiScrollBar}" TargetType="{x:Type ScrollBar}" />
     <Style BasedOn="{StaticResource UiScrollBar}" TargetType="{x:Type ws:ScrollBar}" />
 
 </ResourceDictionary>
